--- a/index.ipynb
+++ b/index.ipynb
@@ -454,7 +454,27 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Argentina',\n",
+       " 'Canada',\n",
+       " 'Croatia',\n",
+       " 'Finland',\n",
+       " 'Italy',\n",
+       " 'Malta',\n",
+       " 'Mexico',\n",
+       " 'Morocco',\n",
+       " 'South Korea',\n",
+       " 'USA'}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "unique_countries  # ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', \n",
     "#'South Korea', 'USA', 'Morocco', 'Malta', 'Finland'] Note: order of countries may be different"
